@@ -1,6 +1,12 @@
 2008-09-20  kitone  <kitone@gna.org>
 
 	* src/actions/errorchecking/ErrorCheckingPlugin.cc:
+	* src/actions/errorchecking/ErrorCheckingPreferences.h:
+	Fix: dialog parent.
+
+2008-09-20  kitone  <kitone@gna.org>
+
+	* src/actions/errorchecking/ErrorCheckingPlugin.cc:
 	* src/actions/errorchecking/MaxCharactersPerLine.h:
 	* src/actions/errorchecking/MaxLinePerSubtitle.h:
 	* src/actions/errorchecking/MinGapBetweenSubtitles.h:
